--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -36,4 +36,4 @@ jobs:
         run: npm install -g surge
         
       - name: Deploy on Surge
-        run: surge ./build http://boot_class5.surge.sh/ --token ${{ secrets.SURGE_TOEKN5 }}
+        run: surge ./build http://boot_class5.surge.sh/ --token ${{ secrets.SURGE_TOKEN5 }}
